test/test_error_2.out
Error type A at Line 2: unknown lexeme 2a
Error type A at Line 2: unknown lexeme 0xFFFZFFFF
Error type B at Line 3: Missing semicolon ';'
Error type B at Line 5: Missing closing parenthesis ']'
