test/test_error_2.spl
int test_error_2() {
    int 2a = 0xFFFZFFFF;
    b = 1
    if (a > b) {
        c[1 = 2;
    }
}